--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: CI
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [master]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -21,28 +21,30 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    # Install all dependencies
-    - run: npm install
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      # Install all dependencies
+      - run: npm install
 
-    - name: Setup git creds
-      env:
-        config_email: ${{secrets.GIT_CONFIG_EMAIL}}
-        config_un: ${{secrets.GIT_CONFIG_USERNAME}}
-      run: |
-        git config --local user.email ${config_email}
-        git config --local user.name ${config_un}
-    - name: Create the release
-      run: npm run release
-    - name: Push tag and file changes to repository
-      run: git push --follow-tags origin master
-    - name: Build fresh for new package with updated version numbers
-      run: npm run build
-    - uses: JS-DevTools/npm-publish@v1
-      with:
-        token: ${{secrets.NPM_TOKEN}}
+      - name: Setup git creds
+        env:
+          config_email: ${{secrets.GIT_CONFIG_EMAIL}}
+          config_un: ${{secrets.GIT_CONFIG_USERNAME}}
+        run: |
+          git config --local user.email ${config_email}
+          git config --local user.name ${config_un}
+      - name: Create the release
+        run: npm run release
+      - name: Create Storybook GitHub Pages
+        run: npm run deploy-storybook
+      - name: Push tag and file changes to repository
+        run: git push --follow-tags origin master
+      - name: Build fresh for new package with updated version numbers
+        run: npm run build
+      - uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{secrets.NPM_TOKEN}}
