ci: Update Workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,3 +52,4 @@ jobs:
       # Create ghpages
       - name: Create Storybook GitHub Pages
         run: npm run deploy-storybook -- --ci
+      # Complete
