--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,11 +29,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
       # Install all dependencies
       - run: npm install
-      # Deploy Storybook to GitHub pages
-      - name: Deploy Storybook to GitHub pages
-        run: npm run deploy-storybook -- --ci
-        env:
-          GH_TOKEN: ${{github.actor}}:${{secrets.GH_TOKEN}}
       # Setup Credentials
       - name: Setup git creds
         env:
@@ -54,4 +49,10 @@ jobs:
       - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{secrets.NPM_TOKEN}}
+      # We do this after publishing the package
+      # Deploy Storybook to GitHub pages
+      - name: Deploy Storybook to GitHub pages
+        run: npm run deploy-storybook -- --ci
+        env:
+          GH_TOKEN: ${{github.actor}}:${{secrets.GH_TOKEN}}
       # Complete
