--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@storybook/addon-links": "^6.0.26",
     "@storybook/react": "^6.0.26",
     "@storybook/storybook-deployer": "2.8.7",
+    "@storybook/theming": "6.0.26",
     "@typescript-eslint/eslint-plugin": "2.34.0",
     "@typescript-eslint/parser": "2.34.0",
     "autoprefixer": "9.8.0",
