chore: Support CJS output for Storybook :headsmack:

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@cxing/date-selector",
   "version": "0.0.21",
   "description": "A React date selector control using Luxon",
+  "main": "dist/date-selector.cjs.js",
   "module": "dist/date-selector.es.js",
   "scripts": {
     "release": "standard-version",
