--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   },
   "devDependencies": {
     "@babel/core": "7.11.6",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.12.0",
+    "@babel/plugin-proposal-optional-chaining": "7.12.0",
     "@babel/preset-env": "7.11.5",
     "@babel/preset-react": "7.10.4",
     "@commitlint/cli": "11.0.0",
@@ -182,6 +184,10 @@
     "presets": [
       "@babel/env",
       "@babel/preset-react"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-nullish-coalescing-operator",
+      "@babel/plugin-proposal-optional-chaining"
     ],
     "ignore": [
       "**/node_modules"
