--- a/package.json
+++ b/package.json
@@ -2,26 +2,6 @@
   "name": "@cxing/date-selector",
   "version": "0.0.29",
   "description": "A React date selector control using Luxon",
-  "main": "dist/date-selector.cjs.js",
-  "module": "dist/date-selector.es.js",
-  "exports": {
-    ".": {
-      "import": "./dist/date-selector.es.js",
-      "require": "./dist/date-selector.cjs.js"
-    }
-  },
-  "files": [
-    "dist"
-  ],
-  "scripts": {
-    "release": "standard-version",
-    "build": "cross-env NODE_ENV=development rollup -c ./configs/rollup.config.js",
-    "prettier": "prettier --write 'src/**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "deploy-storybook": "storybook-to-ghpages"
-  },
   "keywords": [
     "react",
     "date",
@@ -42,55 +22,77 @@
   "homepage": "https://cutterscrossing.com/date-selector",
   "author": "Steve 'Cutter' Blades",
   "license": "MIT",
+  "main": "dist/date-selector.cjs.js",
+  "module": "dist/date-selector.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/date-selector.es.js",
+      "require": "./dist/date-selector.cjs.js"
+    }
+  },
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "release": "standard-version",
+    "build": "cross-env NODE_ENV=development rollup -c ./configs/rollup.config.js",
+    "prettier": "prettier --write 'src/**/*.js'",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "deploy-storybook": "storybook-to-ghpages"
+  },
   "dependencies": {
-    "@babel/runtime": "7.12.1",
-    "classnames": "2.2.6",
-    "luxon": "1.25.0",
+    "@babel/runtime": "7.14.0",
+    "classnames": "2.3.1",
+    "luxon": "1.27.0",
     "prop-types": "15.7.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@babel/core": "7.12.1",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "7.12.1",
-    "@babel/plugin-proposal-optional-chaining": "7.12.1",
-    "@babel/plugin-transform-runtime": "7.12.1",
-    "@babel/preset-env": "7.12.1",
-    "@babel/preset-react": "7.12.1",
-    "@commitlint/cli": "11.0.0",
-    "@commitlint/config-conventional": "11.0.0",
-    "@emotion/babel-preset-css-prop": "10.0.27",
-    "@emotion/core": "10.0.35",
-    "@rollup/plugin-babel": "5.2.1",
+    "@babel/core": "7.14.3",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.14.2",
+    "@babel/plugin-proposal-optional-chaining": "7.14.2",
+    "@babel/plugin-transform-runtime": "7.14.3",
+    "@babel/preset-env": "7.14.2",
+    "@babel/preset-react": "7.13.13",
+    "@commitlint/cli": "12.1.4",
+    "@commitlint/config-conventional": "12.1.4",
+    "@emotion/babel-plugin": "11.3.0",
+    "@emotion/eslint-plugin": "11.2.0",
+    "@emotion/react": "11.4.0",
+    "@rollup/plugin-babel": "5.3.0",
+    "@rollup/plugin-commonjs": "19.0.0",
     "@rollup/plugin-json": "4.1.0",
-    "@rollup/plugin-node-resolve": "9.0.0",
-    "@storybook/addon-actions": "^6.0.26",
-    "@storybook/addon-essentials": "^6.0.26",
-    "@storybook/addon-links": "^6.0.26",
-    "@storybook/react": "^6.0.26",
-    "@storybook/storybook-deployer": "2.8.7",
-    "@storybook/theming": "6.0.26",
-    "@typescript-eslint/eslint-plugin": "2.34.0",
-    "@typescript-eslint/parser": "2.34.0",
+    "@rollup/plugin-node-resolve": "13.0.0",
+    "@storybook/addon-actions": "6.2.9",
+    "@storybook/addon-essentials": "6.2.9",
+    "@storybook/addon-links": "6.2.9",
+    "@storybook/react": "6.2.9",
+    "@storybook/storybook-deployer": "2.8.8",
+    "@storybook/theming": "6.2.9",
+    "@typescript-eslint/eslint-plugin": "4.24.0",
+    "@typescript-eslint/parser": "4.24.0",
     "babel-eslint": "10.1.0",
-    "babel-loader": "^8.1.0",
-    "cross-env": "7.0.2",
-    "eslint": "6.8.0",
-    "eslint-config-react-app": "5.2.1",
-    "eslint-plugin-flowtype": "4.7.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsx-a11y": "6.3.1",
-    "eslint-plugin-react": "7.21.4",
-    "eslint-plugin-react-hooks": "2.5.1",
+    "babel-loader": "8.2.2",
+    "cross-env": "7.0.3",
+    "eslint": "7.26.0",
+    "eslint-config-react-app": "6.0.0",
+    "eslint-plugin-flowtype": "5.7.2",
+    "eslint-plugin-import": "2.23.2",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.23.2",
+    "eslint-plugin-react-hooks": "4.2.0",
     "git-branch-is": "4.0.0",
     "husky": "4.3.0",
-    "prettier": "2.1.2",
-    "react-is": "^16.13.1",
-    "rollup": "2.29.0",
+    "prettier": "2.3.0",
+    "react-is": "17.0.2",
+    "rollup": "2.48.0",
     "rollup-plugin-cleanup": "3.2.1",
     "rollup-plugin-clear": "2.0.7",
     "rollup-plugin-eslint": "7.0.0",
-    "standard-version": "9.0.0"
+    "standard-version": "9.3.0"
   },
   "husky": {
     "hooks": {
@@ -164,6 +166,9 @@
   },
   "eslintConfig": {
     "extends": "react-app",
+    "plugins": [
+      "@emotion"
+    ],
     "overrides": [
       {
         "files": [
@@ -178,7 +183,16 @@
           }
         }
       }
-    ]
+    ],
+    "rules": {
+      "@emotion/pkg-renaming": "error",
+      "@emotion/jsx-import": "off",
+      "@emotion/no-vanilla": "error",
+      "@emotion/import-from-emotion": "error",
+      "@emotion/styled-import": "error",
+      "react/jsx-uses-react": "off",
+      "react/react-in-jsx-scope": "off"
+    }
   },
   "browserslist": {
     "production": [
@@ -198,41 +212,5 @@
     "singleQuote": true,
     "tabWidth": 2,
     "useTabs": false
-  },
-  "babel": {
-    "presets": [
-      "@babel/env",
-      "@babel/preset-react",
-      "@emotion/babel-preset-css-prop"
-    ],
-    "plugins": [
-      [
-        "@babel/plugin-transform-runtime",
-        {
-          "corejs": 3
-        }
-      ],
-      "@babel/plugin-proposal-nullish-coalescing-operator",
-      "@babel/plugin-proposal-optional-chaining"
-    ],
-    "ignore": [
-      "**/node_modules"
-    ],
-    "env": {
-      "test": {
-        "presets": [
-          [
-            "@babel/env",
-            {
-              "modules": "commonjs",
-              "targets": {
-                "node": "current"
-              }
-            }
-          ],
-          "preset-react"
-        ]
-      }
-    }
   }
 }
