--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.2",
     "cross-env": "7.0.3",
+    "deep-equal": "2.0.5",
     "eslint": "7.26.0",
     "eslint-config-react-app": "6.0.0",
     "eslint-plugin-flowtype": "5.7.2",
